snapshots/syntax/library/statements/app_activate/appactivate_at_module_level.snap
---
source: src/syntax/library/statements/app_activate.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: AppActivateStatement
      children:
        - kind: AppActivateKeyword
          text: AppActivate
        - kind: Whitespace
          text: " "
        - kind: StringLiteral
          text: "\"MyApp\""
        - kind: Newline
          text: "\n"
